Properly document the process of adding user-defined types with LLU.

--- a/docs/_static/css/custom.css
+++ b/docs/_static/css/custom.css
@@ -1,3 +1,9 @@
 .wy-side-nav-search {
 	background-color: unset;
 }
+
+/* Work around WL code parser bug in Sphinx, which marks valid code as erroneous */
+.highlight .err {
+	color: inherit;
+	background-color: inherit;
+}
