--- a/docs/_static/css/custom.css
+++ b/docs/_static/css/custom.css
@@ -2,6 +2,19 @@
 	background-color: unset;
 }
 
+.wy-nav-content {
+	max-width: 1440px;
+}
+
+.rst-content .cpp.function > dt {
+	width: 100%;
+}
+
+.rst-content .cpp.class > dt {
+	width: 100%;
+	font-size: 120%;
+}
+
 /* Work around WL code parser bug in Sphinx, which marks valid code as erroneous */
 .highlight .err {
 	color: inherit;
