With custom js and css make function details hidden by default in Sphinx docs. This change makes the documentation much more readable.

--- a/docs/_static/css/custom.css
+++ b/docs/_static/css/custom.css
@@ -19,6 +19,10 @@
 	line-height: 1.5;
 }
 
+.dropdown-icon {
+	float: right;
+}
+
 /* Work around WL code parser bug in Sphinx, which marks valid code as erroneous */
 .highlight .err {
 	color: inherit;
